--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
             transition: 0.2s ease-in-out;
         }
 
-        .startColor{
-            fill: rgb(183, 248, 255);
-        }
-
-        .noScroll{
+        .hideOnPC{
             fill: rgb(183, 248, 255);
         }
 
@@ -51,10 +47,6 @@
 
         header.scrolled nav ul li a {
             color: rgb(229, 252, 255);
-        }
-
-        .yesScroll{
-            fill: rgb(229, 252, 255);
         }
 
         header h2 {
@@ -234,7 +226,7 @@
                 <li class="hideOnMobile"><a target="_blank"
                         href="https://www.linkedin.com/in/ishaan-gupta-11296a2a8">LinkedIn</a></li>
                 <li class="hideOnMobile"><a target="_blank" href="https://github.com/LowSpecIshaan">GitHub</a></li>
-                <li class="startColor" class="hideOnPC" onclick=showSidebar()><button><svg
+                <li class="hideOnPC" onclick=showSidebar()><button><svg
                             xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -1160 960 960" width="30px">
                             <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
                         </svg></button>
@@ -326,15 +318,13 @@
                 header.classList.remove('scrolled');
             }
 
-            const bar = document.querySelector('.hideOnPC');
+            const bar = document.querySelector('.hideOnPC')
 
+            
             if (window.scrollY > 0) {
-                bar.classList.add('yesScroll');
-                bar.classList.remove('noScroll');
-                bar.classList.remove('startColor');
+                bar.style.fill = 'rgb(229, 252, 255)';
             } else {
-                bar.classList.add('noScroll');
-                bar.classList.remove('yesScroll');
+                bar.style.fill = 'rgb(183, 248, 255)';
             }
         })
     </script>
