--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 Non-Programming Skillset
             </h1>
             <p>I have always been fond of music, my keen interest in music motivated me to learn music production and
-                sound engineering. My primary Digital Audio Workstation is Fruit Loops. I also have knowledge of music
+                sound engineering. My primary Digital Audio Workstation is Fruity Loops. I also have knowledge of music
                 theory. I know how to use Photoshop for image manipulation and graphic design. I also have knowledge of
                 video editing.</p>
         </div>
