--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <p>I am Ishaan Gupta, a 1st year BE student at Thapar Institute of Engineering and Technology. I am
                 passionate about technology and constantly learning new skills to build innovative solutions.</p>
             <div style="text-align: center;">
-                <img src="images/5334856a-7e59-4fe4-9a5e-2cfc611efe4c.jpg" alt="Ishaan" width="200px">
+                <img src="images/mypiccropped.jpg" alt="Ishaan" width="200px">
             </div>
             <div class="skills" id="skills"></div>
             <h1>
