--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <h1>
                 Programming Skillset
             </h1>
-            <p>I currently know HTML/CSS(Using which I created this Website xD), Unity and basic C programming.</p>
+            <p>I currently know HTML/CSS/JavaScript, C and basic C++.</p>
             <h1>
                 Non-Programming Skillset
             </h1>
